--- a/project/.classpath
+++ b/project/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/ddmlib.jar"/>
+	<classpathentry kind="lib" path="lib/ddmlib.jar" sourcepath="/raid/dev/ddmlib/src/main/java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
