--- a/project/.classpath
+++ b/project/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/ddmlib.jar" sourcepath="/raid/dev/ddmlib/src/main/java"/>
+	<classpathentry kind="lib" path="lib/swing-misc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
