Replace swing-misc.jar with dependency on swing-utils

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    compile 'de.topobyte:swing-utils:0.0.7'
     compile fileTree(dir: 'lib', include: ['*.jar'])
 }
 
